--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "mobx": "^6.5.0",
+    "mobx-react": "^7.4.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
